# bindata

./: README.md
bindata_cli/: .gitignore  Cargo.toml
